<resources>
    <string name="app_name">吖吖购商家版</string>

    <string name="login_title">登录</string>
    <string name="login_content">吖吖购商家版账号登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_merchant">商户开通申请</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="input_username">请输入吖吖购商家版账号</string>
    <string name="next">下一步</string>
    <string name="phone_proving">手机验证</string>
    <string name="phone_proving_content">验证码已发送至%s</string>
    <string name="phone_proving_hint">短信验证码</string>
    <string name="reset_password_title">重置密码</string>
    <string name="reset_password_content">新密码与旧密码不能相同</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_confirm_password">请再次输入新密码</string>
    <string name="sure">确定</string>
    <string name="home">首页</string>
    <string name="activity">活动</string>
    <string name="order">订单</string>
    <string name="goods">商品</string>
    <string name="user">我的</string>
    <string name="home_title">吖吖购商家版</string>
    <string name="home_title_agent">吖吖购代理版</string>
    <string name="today_amount">今日实收金额(元)</string>
    <string name="today_transaction_number">今日交易笔数</string>
    <string name="today_visitor_number">今日交易总额</string>
    <string name="today_new_member_number">今日新增会员</string>
    <string name="total_member_number">总会员数量</string>
    <string name="total_transaction_number">交易金总额</string>
    <string name="total_order_number">订单总数</string>
    <string name="receivables">核销</string>
    <string name="cash">提现</string>
    <string name="scan_payment">扫码支付</string>
    <string name="online_payment">线上消费</string>
    <string name="with_draw_money">提现</string>
    <string name="recharge">充值</string>
    <string name="report">报表</string>
    <string name="vip">会员</string>
    <string name="balance_account">对账</string>
    <string name="member_data">—— 经营概要 ——</string>
    <string name="search_merchant_member">搜索门店/会员</string>
    <string name="all_status">全部状态</string>
    <string name="screen">筛选</string>
    <string name="cancel">取消</string>
    <string name="all_merchant">全部门店</string>
    <string name="all_employee">全部员工</string>
    <string name="confirm_choose">确认选择</string>
    <string name="refund">退</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="member_phone">会员手机号：</string>
    <string name="screen_hint">三个月前数据请登录商户后台查看</string>
    <string name="reset">重置</string>
    <string name="member_status">会员状态</string>
    <string name="search">搜索</string>
    <string name="balance">余额</string>
    <string name="name_phone">手机号/姓名</string>
    <string name="total_money">总金额</string>
    <string name="received_money">实收金额</string>
    <string name="no_discount_money">不参与优惠金额</string>
    <string name="confirm_remind">确认提现</string>
    <string name="bank_name">到账银行卡</string>
    <string name="withdraw_money_count">当前可提现￥%s，</string>
    <string name="withdraw_all">全部提现</string>
    <string name="member_balance">账户余额</string>
    <string name="withdraw_money_rule">当日收入款项，次日13:00后才可提现（节日除外）</string>
    <string name="all_way">全部方式</string>
    <string name="choose_time">选择时间</string>
    <string name="withdraw_status">提现状态</string>
    <string name="poundage">手续费</string>
    <string name="withdraw_time">提现时间</string>
    <string name="withdraw_bank_card">提现银行卡</string>
    <string name="serial_number">流水号</string>
    <string name="refresh">刷新</string>

    <string name="hint_net_error_layout">网络好像丢了</string>
    <string name="hint_empty_data">咦~这里空空如也~</string>
</resources>
