<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_F5F6F7"
    android:orientation="vertical">

    <include layout="@layout/layout_light_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_white_rounded_2dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_grayfbfbfb_rounded_2dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_bank_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:textColor="@color/black_333333"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/me_ic_next_black" />

            <TextView
                android:id="@+id/tv_bank_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_toLeftOf="@id/iv_next"
                android:layout_toRightOf="@id/tv_bank_title"
                android:lines="1"
                android:textColor="@color/blue_576B95"
                android:textSize="13sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_money"
                android:textColor="@color/black_333333"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥"
                    android:textColor="@color/black_565656"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/ed_money_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:paddingTop="0dp"
                    android:hint="提现金额"
                    android:textColor="@color/black"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:background="@color/transparent" />
            </LinearLayout>

            <View
                style="@style/divider_horizontal"
                android:background="@color/gray_e6e6e6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <TextView
                    android:id="@+id/tv_total_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_money_count"
                    android:textColor="@color/black_333333"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_withdraw_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_all"
                    android:textColor="@color/blue_576B95"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:paddingBottom="14dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_balance"
            android:textColor="@color/black_333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_member_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/member_balance"
            android:textColor="@color/black_333333"
            android:textSize="14sp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/gray_999999"
        android:text="@string/withdraw_money_rule"/>

    <TextView
        android:id="@+id/tv_submit_withdraw"
        style="@style/tv_submit_btn"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="9dp"
        android:text="@string/confirm_remind" />

</LinearLayout>